--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
-      <a-assets timeout="30000">
+      {# <a-assets timeout="30000">
         <a-asset-item
           id="girl_animated"
           src="./models/character_girl_animated_walk.glb"
@@ -52,7 +52,7 @@
         id="light"
         target="girl"
         position="-5 3 1.5"
-      ></a-light>
+      ></a-light> #}
 
       <a-text
         value="This content will always face you."
