--- a/index.html
+++ b/index.html
@@ -3,63 +3,66 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Location-based AR.js demo</title>
+    <title>Image based tracking AR.js demo</title>
+    <!-- import aframe and then ar.js with image tracking / location based features -->
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+
+    <!-- style for the loader -->
+    <style>
+      .arjs-loader {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: 9999;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .arjs-loader div {
+        text-align: center;
+        font-size: 1.25em;
+        color: white;
+      }
+    </style>
   </head>
 
-  <body style="margin: 0; overflow: hidden">
+  <body style="margin : 0px; overflow: hidden;">
+    <!-- minimal loader shown until image descriptors are loaded. Loading may take a while according to the device computational power -->
+    <div class="arjs-loader">
+      <div>Loading, please wait...</div>
+    </div>
+
+    <!-- a-frame scene -->
     <a-scene
-      vr-mode-ui="enabled: false"
+      vr-mode-ui="enabled: false;"
+      renderer="logarithmicDepthBuffer: true;"
       embedded
-      arjs="sourceType: webcam; debugUIEnabled: false;"
-    >
-      <a-assets timeout="30000">
-        <a-asset-item
-          id="girl_animated"
-          src="./models/character_girl_animated_walk.glb"
-          response-type="arraybuffer"
-        ></a-asset-item>
-      </a-assets>
-
-      <a-entity
-        id="girl"
-        look-at="[gps-camera]"
-        gps-entity-place="latitude: <add-your-latitude>; longitude: <add-your-longitude>;"
-      >
-        <a-entity
-          position="0 0 0"
-          rotation="0 0 0"
-          scale="0.01 0.01 0.01"
-          gltf-model="#girl_animated"
-          animation-mixer
-          shadow="cast: true; receive: false"
-        ></a-entity>
-      </a-entity>
-
-      <a-entity light="type: ambient; intensity: 1;"></a-entity>
-      <a-light
-        type="directional"
-        light="castShadow: true;
-                      shadowMapHeight: 1024;
-                      shadowMapWidth: 1024;
-                      shadowCameraLeft: -7;
-                      shadowCameraRight: 5;
-                      shadowCameraBottom: -5;
-                      shadowCameraTop: 5;"
-        id="light"
-        target="girl"
-        position="-5 3 1.5"
-      ></a-light>
-
-      <a-text
-        value="This content will always face you."
-        look-at="[gps-camera]"
-        scale="50 50 50"
-        gps-entity-place="latitude: <add-your-latitude>; longitude: <add-your-longitude>;"
-      ></a-text>
-      <a-camera gps-camera rotation-reader> </a-camera>
+      arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
+      <!-- a-nft is the anchor that defines an Image Tracking entity -->
+      <!-- on 'url' use the path to the Image Descriptors created before. -->
+      <!-- the path should end with the name without the extension e.g. if file is trex.fset' the path should end with trex -->
+      <a-nft
+        type="nft"
+        url="./images/ursa_logo.iset"
+        smooth="true"
+        smoothCount="10"
+        smoothTolerance=".01"
+        smoothThreshold="5">
+          <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
+          <a-entity
+          gltf-model="./models/character_girl_animated_walk.glb"
+              scale="0.01 0.01 0.01"
+              position="3 3 0"
+          >
+          </a-entity>
+      </a-nft>
+      <!-- static camera that moves according to the device movemenents -->
+      <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
