--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- the path should end with the name without the extension e.g. if file is trex.fset' the path should end with trex -->
       <a-nft
         type="nft"
-        url="./images/ursa_logo.iset"
+        url="./images/ursa_logo"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
