--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         smoothThreshold="5">
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
-          gltf-model="./models/character_girl_animated_walk.glb"
+          gltf-model="./models/scene.gltf"
               scale="1 1 1"
               position="50 150 0"
           >
