--- a/index.html
+++ b/index.html
@@ -55,14 +55,20 @@
         smoothThreshold="5">
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
+          id="gltf"
           gltf-model="./models/character_girl_animated_walk.glb"
               scale="1 1 1"
               position="0 0 -2"
+
           >
           </a-entity>
       </a-nft>
       <!-- static camera that moves according to the device movemenents -->
-      <a-entity camera></a-entity>
+      <a-entity camera>
+
+        <a-entity gltf-model="#gltf" animation-mixer>
+        </a-entity>
+      </a-entity>
     </a-scene>
   </body>
 </html>
