--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
           id="gltf"
-          gltf-model="./models/character_girl_animated_walk.glb"
+          gltf-model="./models/a_certain_j_girl_at_the_window.alpha_version.glb"
               scale="1.5 1.5 1.5"
               position="50 0 -50"
-
           >
           </a-entity>
       </a-nft>
