--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
           id="gltf"
-          gltf-model="./models/a_certain_j_girl_at_the_window.alpha_version.glb"
+          gltf-model="./models/vivi_manga_student_girl_style.glb"
               scale="100 100 100"
               position="50 50 -100"
           >
