--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
           id="gltf"
           gltf-model="./models/vivi_manga_student_girl_style.glb"
               scale="100 100 100"
-              position="50 50 -100"
+              position="50 0 -100"
+              rotation="0 3.14 0"
           >
           </a-entity>
 
@@ -67,8 +68,7 @@
       <!-- static camera that moves according to the device movemenents -->
       <a-entity camera>
 
-        <a-entity gltf-model="#gltf" animation-mixer>
-        </a-entity>
+        
       </a-entity>
     </a-scene>
   </body>
