--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
           id="gltf"
           gltf-model="./models/vivi.glb"
               scale="100 100 100"
-              position="50 0 -100"
-         
+              position="50 0 -200"
           >
           </a-entity>
-
+          <a-entity light="type: ambient; intensity: 1;"></a-entity>
           
       </a-nft>
       <!-- static camera that moves according to the device movemenents -->
