--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.0.0/dist/aframe-extras.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
     <!-- style for the loader -->
     <style>
       .arjs-loader {
@@ -56,7 +57,7 @@
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
           id="gltf"
-          gltf-model="./models/vivi.glb"
+          gltf-model="./models/vivi2.glb"
               scale="100 100 100"
               position="50 0 -200"
           >
