--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
           >
           </a-entity>
       </a-nft>
+
+
+      <a-entity light="type: ambient; intensity: 1;"></a-entity>
+      <a-light type="directional"
+               light="castShadow: true;
+                      shadowMapHeight: 1024;
+                      shadowMapWidth: 1024;
+                      shadowCameraLeft: -7;
+                      shadowCameraRight: 5;
+                      shadowCameraBottom: -5;
+                      shadowCameraTop: 5;"
+               id="light"
+               target="girl"
+               position="-5 3 1.5"></a-light>
       <!-- static camera that moves according to the device movemenents -->
       <a-entity camera>
       </a-entity>
