--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Image based tracking AR.js demo</title>
     <!-- import aframe and then ar.js with image tracking / location based features -->
-    <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-    
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.0.0/dist/aframe-extras.min.js"></script>
     <!-- style for the loader -->
     <style>
       .arjs-loader {
@@ -56,18 +56,18 @@
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
           id="gltf"
-          gltf-model="./models/vivi4.glb"
-              scale="100 100 100"
-              position="0 10 0"
+          gltf-model="./models/luoli_run.glb"
+              scale="1.5 1.5 1.5"
+              position="50 0 -50"
+
           >
           </a-entity>
       </a-nft>
-
-
-      <a-entity light="type: ambient; intensity: 3;"></a-entity>
-      
       <!-- static camera that moves according to the device movemenents -->
       <a-entity camera>
+
+        <a-entity gltf-model="#gltf" animation-mixer>
+        </a-entity>
       </a-entity>
     </a-scene>
   </body>
