--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
           <a-entity
           id="gltf"
-          gltf-model="./models/luoli_run.glb"
+          gltf-model="./models/fanart_garin_blackx_-_luntima_student_girl.glb"
               scale="1.5 1.5 1.5"
               position="50 0 -50"
 
