--- a/index.html
+++ b/index.html
@@ -57,13 +57,15 @@
           <a-entity
           id="gltf"
           gltf-model="./models/fanart_garin_blackx_-_luntima_student_girl.glb"
-              scale="50 50 50"
+              scale="10 10 10"
               position="50 0 -50"
 
           >
           </a-entity>
       </a-nft>
+      <a-entity light="type: ambient; intensity: 1;"></a-entity>
       <!-- static camera that moves according to the device movemenents -->
+      
       <a-entity camera>
 
         <a-entity gltf-model="#gltf" animation-mixer>
