--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           gltf-model="./models/fanart_garin_blackx_-_luntima_student_girl.glb"
               scale="15 15 15"
               position="50 0 -50"
-
+              animation-mixer="loop: repeat"
           >
           </a-entity>
       </a-nft>
@@ -68,8 +68,7 @@
       
       <a-entity camera>
 
-        <a-entity gltf-model="#gltf" animation-mixer>
-        </a-entity>
+        
       </a-entity>
     </a-scene>
   </body>
